--- a/index.html
+++ b/index.html
@@ -682,15 +682,14 @@
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
                                                             style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform: uppercase;">
                                                             Who we are</div>
-                                                        <div class="tp-caption   tp-resizeme" id="slide-6-layer-9"
+                                                        <div class="tp-caption txt-align tp-resizeme home-prg" id="slide-6-layer-9"
                                                             data-x="538" data-y="400" data-voffset="129"
                                                             data-width="['746']" data-height="['auto']" data-type="text"
                                                             data-responsive_offset="on"
                                                             data-frames='[{"delay":980,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                                            style="z-index: 9; min-width: 746px; max-width: 746px; white-space: normal; font-size: 18px; line-height: 28px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:poppins;text-align: justify !important;">
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
                                                             Raffles Design Institute is a design school based in Riyadh,
                                                             Saudi Arabia, It is an institute
                                                             emerging from the partnership between Raffles International
@@ -1092,7 +1091,8 @@
                                                     style="padding-bottom: 15px ;">
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-size: 18px ;font-weight: 400 ;text-transform: none ;color: black ;">
-                                                        <p class="txtmob1" data-aos="fade-right" data-aos-duration="500"><b>Raffles Education Institute,</b>
+                                                        <p class="txtmob1" data-aos="fade-right"
+                                                            data-aos-duration="500"><b>Raffles Education Institute,</b>
                                                             established in 2014, is one of a chain of thirty branches of
                                                             Raffles
                                                             Institutes which was established in 1990 in Singapore, and
@@ -1101,14 +1101,18 @@
                                                     </div>
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-size: 18px ;font-weight: 400 ;text-transform: none ;color: black ;">
-                                                        <p class="txtmob1" data-aos="fade-right" data-aos-duration="500" data-aos-delay="100">Within 5 years, multiple majors were offered
+                                                        <p class="txtmob1" data-aos="fade-right" data-aos-duration="500"
+                                                            data-aos-delay="100">Within 5 years, multiple majors were
+                                                            offered
                                                             at<b> Raffles University</b>, including
                                                             (graphic design - product design - jewelry design - interior
                                                             design - game design - animation design).</p>
                                                     </div>
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-size: 18px ;font-weight: 400 ;text-transform: none ;color: black ;">
-                                                        <p class="txtmob1" data-aos="fade-right" data-aos-duration="500" data-aos-delay="200">In 2004, <b> Raffles Design Institute</b> was
+                                                        <p class="txtmob1" data-aos="fade-right" data-aos-duration="500"
+                                                            data-aos-delay="200">In 2004, <b> Raffles Design
+                                                                Institute</b> was
                                                             awarded
                                                             the Singapore Quality Readiness
                                                             for Special Education Organizations. In 2005, Raffles was
@@ -1126,8 +1130,10 @@
                                                 <div
                                                     class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border"
-                                                        href="about-us.html" id="gdlr-core-button-id-44682" data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"><span
-                                                            class="gdlr-core-content" style="color: black ;">Read
+                                                        href="about-us.html" id="gdlr-core-button-id-44682"
+                                                        data-aos="fade-right" data-aos-duration="500"
+                                                        data-aos-delay="200"><span class="gdlr-core-content"
+                                                            style="color: black ;">Read
                                                             More</span><i
                                                             class="gdlr-core-pos-right fa fa-long-arrow-right"
                                                             style="font-size: 18px ;color: black ;margin-top: 3px;"></i></a>
@@ -1179,7 +1185,8 @@
                                     <div
                                         class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob" data-aos="fade-up" data-aos-duration="500"
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                                data-aos="fade-up" data-aos-duration="500"
                                                 style="font-size: 40px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;font-family: 'ITC Avant Garde Gothic';">
                                                 A Vibrant Campus</h3>
                                         </div>
@@ -1190,7 +1197,8 @@
                                         style="padding-bottom: 0px ;">
                                         <div class="gdlr-core-text-box-item-content"
                                             style="font-size: 19px ;text-transform: none ;color: #ffffff ;">
-                                            <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" class="txtmob1" style="font-weight: 200;text-align: center;">The campus
+                                            <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="100"
+                                                class="txtmob1" style="font-weight: 200;text-align: center;">The campus
                                                 of Raffles Design
                                                 Institute is located on Al-Orouba Street on the corner of Al-Amir Turki
                                                 Bin Abdulaziz Al Awal Road.
@@ -1198,7 +1206,8 @@
                                                 as it is located near many facilities such as:
                                                 (a hotel with a restaurant lounge – spa – gallery – restaurant),
                                             </p>
-                                            <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="200" class="txtmob1" style="font-weight: 200;text-align: center;">and it is
+                                            <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="200"
+                                                class="txtmob1" style="font-weight: 200;text-align: center;">and it is
                                                 also located near the
                                                 world-famous design and shopping center in Al-Olaya.
                                                 The campus of Raffles Design Institute provides a safe and comfortable
@@ -1247,7 +1256,8 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr"
                                                     style="padding-bottom: 10px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob" data-aos="fade-left" data-aos-duration="500" 
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                                            data-aos="fade-left" data-aos-duration="500"
                                                             style="font-size: 29px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: black ;">
                                                             ENROLL NOW!</h3>
                                                     </div>
@@ -1262,7 +1272,9 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-text-box-item-content txtmob1"
                                                         style="font-size: 22px ;text-transform: none ;color: black ;">
-                                                        <p data-aos="fade-left" data-aos-duration="500" data-aos-delay="100">Registration is open for the new academic year</p>
+                                                        <p data-aos="fade-left" data-aos-duration="500"
+                                                            data-aos-delay="100">Registration is open for the new
+                                                            academic year</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1270,7 +1282,8 @@
                                                 <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align "
                                                     style="padding-bottom: 0px ;"><a
                                                         class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border "
-                                                        href="admission.html" data-aos="fade-left" data-aos-duration="500" data-aos-delay="200"
+                                                        href="admission.html" data-aos="fade-left"
+                                                        data-aos-duration="500" data-aos-delay="200"
                                                         style="font-size: 17px ;color: #ffffff ;padding: 10px 30px 10px 30px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
                                                             class="gdlr-core-content txtmob1">Apply Now</span></a></div>
                                             </div>
@@ -1291,7 +1304,8 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
+                                                <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
+                                                    data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 35px;"><img src="img/icon 7-07.png" alt=""
@@ -1323,7 +1337,8 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
+                                                <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
+                                                    data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 31px;"><img src="img/icon 8-08.png" alt=""
@@ -1356,7 +1371,8 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr" data-aos="fade-right" data-aos-duration="500"
+                                                <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
+                                                    data-aos="fade-right" data-aos-duration="500"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 33px;"><img src="img/icon 9-09.png" alt=""
