--- a/gallery.html
+++ b/gallery.html
@@ -598,7 +598,7 @@
                                                 class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-column-first gdlr-core-item-pdlr gdlr-core-item-mgb">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
                                                     <a class="gdlr-core-lightgallery gdlr-core-js "
-                                                        href="img/Gallery/Gallery1-lg.png"
+                                                        href="img/Gallery/Gallery1-lg.webp"
                                                         data-lightbox-group="gdlr-core-img-group-1"><img
                                                             src="img/Gallery/Gallery1.png" width="700" height="660"
                                                             alt="" /><span class="gdlr-core-image-overlay "><i
@@ -609,7 +609,7 @@
                                                 class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-item-pdlr gdlr-core-item-mgb">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
                                                     <a class="gdlr-core-lightgallery gdlr-core-js "
-                                                        href="img/Gallery/Gallery2-lg.png"
+                                                        href="img/Gallery/Gallery2-lg.webp"
                                                         data-lightbox-group="gdlr-core-img-group-1"><img
                                                             src="img/Gallery/Gallery2.png" width="700" height="660"
                                                             alt="" /><span class="gdlr-core-image-overlay "><i
@@ -620,7 +620,7 @@
                                                 class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-item-pdlr gdlr-core-item-mgb">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
                                                     <a class="gdlr-core-lightgallery gdlr-core-js "
-                                                        href="img/Gallery/Gallery3-lg.png"
+                                                        href="img/Gallery/Gallery3-lg.webp"
                                                         data-lightbox-group="gdlr-core-img-group-1"><img
                                                             src="img/Gallery/Gallery3.png" width="700" height="660"
                                                             alt="" /><span class="gdlr-core-image-overlay "><i
@@ -631,7 +631,7 @@
                                                 class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-item-pdlr gdlr-core-item-mgb">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
                                                     <a class="gdlr-core-lightgallery gdlr-core-js "
-                                                        href="img/Gallery/Gallery4-lg.png"
+                                                        href="img/Gallery/Gallery4-lg.webp"
                                                         data-lightbox-group="gdlr-core-img-group-1"><img
                                                             src="img/Gallery/Gallery4.png" width="700" height="660"
                                                             alt="" /><span class="gdlr-core-image-overlay "><i
@@ -647,7 +647,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 120px 20px 70px 20px;" data-skin="White Text">
                         <div class="gdlr-core-pbf-background-wrap" style="background-color: #0a0a0a ;">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(img/Gallery/Background.png) ;background-size: cover ;background-position: center ;"
+                                style="background-image: url(img/Gallery/Background.webp) ;background-size: cover ;background-position: center ;"
                                 data-parallax-speed="0.2"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
