--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/1-01.png"
+                                                        data-param10="" data-description=""> <img src="img/1-01.webp"
                                                             alt="" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
@@ -642,7 +642,7 @@
                                         style="min-height: 575px ;" data-sync-height="height-half">
                                         <div
                                             class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
-                                            <img src="img/posts (1).png" style="width: 100%;" alt="">
+                                            <img src="img/posts (1).jpg" style="width: 100%;" alt="">
                                         </div>
                                     </div>
                                 </div>
