--- a/services.html
+++ b/services.html
@@ -745,7 +745,7 @@
                                             <div data-aos="fade-right" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <img src="img/foundation/learning-study.jpg" width="900"
+                                                    <img src="img/Services/Services(1).jpg" width="900"
                                                             height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -763,7 +763,7 @@
                                             <div data-aos="fade-left" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <img src="img/foundation/drawing.jpg" width="900"
+                                                    <img src="img/Services/Services(2).jpg" width="900"
                                                             height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -779,7 +779,7 @@
                                             <div data-aos="fade-right" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <img src="img/foundation/art-history.jpg" width="900"
+                                                    <img src="img/Services/Services(4).jpg" width="900"
                                                             height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -793,7 +793,7 @@
                                             <div data-aos="fade-left" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                  <img src="img/foundation/Mathematics.jpg" width="900"
+                                                  <img src="img/Services/Services(3).jpg" width="900"
                                                             height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
