--- a/lifeinriyadh.html
+++ b/lifeinriyadh.html
@@ -635,7 +635,7 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-01.png"
+                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-01.webp"
                                                             alt="" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
