--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first width1"
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first width1 pad2"
                                     style="padding-top: 6%;width: 32%;float: left;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
@@ -650,8 +650,8 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js pad1"
                                         style="padding: 80px 120px 55px 90px;" data-sync-height="height-half"
                                         data-sync-height-center>
-                                        <div class="gdlr-core-pbf-background-wrap">
-                                            <div class="gdlr-core-pbf-background2 gdlr-core-parallax gdlr-core-js"
+                                        <div class="gdlr-core-pbf-background-wrap height2">
+                                            <div class="gdlr-core-pbf-background2 gdlr-core-parallax gdlr-core-js height2"
                                                 style="background-image: url(img/B34A0461.jpg) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1">
                                                 <div class="overlay"></div>
@@ -663,7 +663,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr"
                                                     style="padding-bottom: 10px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title1"
                                                             data-aos="fade-left" data-aos-duration="500"
                                                             style="font-size: 29px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: black ;">
                                                             ENROLL NOW!</h3>
@@ -677,9 +677,9 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
-                                                    <div class="gdlr-core-text-box-item-content txtmob1"
+                                                    <div class="gdlr-core-text-box-item-content "
                                                         style="font-size: 22px ;text-transform: none ;color: black ;">
-                                                        <p data-aos="fade-left" data-aos-duration="500"
+                                                        <p class="text1" data-aos="fade-left" data-aos-duration="500"
                                                             data-aos-delay="100">Registration is open for the new
                                                             academic year</p>
                                                     </div>
@@ -688,11 +688,11 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align "
                                                     style="padding-bottom: 0px ;"><a
-                                                        class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border "
+                                                        class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border button1"
                                                         href="admission.html" data-aos="fade-left"
                                                         data-aos-duration="500" data-aos-delay="200"
                                                         style="font-size: 15px ;color: #ffffff ;padding: 5px 20px 5px 20px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
-                                                            class="gdlr-core-content txtmob1">Apply Now</span></a></div>
+                                                            class="gdlr-core-content text2">Apply Now</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -700,7 +700,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-wrapper " style="padding: 90px 0px 55px 0px;" data-skin="Column White">
+                    <div class="gdlr-core-pbf-wrapper pad1" style="padding: 90px 0px 55px 0px;" data-skin="Column White">
                         <div class="gdlr-core-pbf-background-wrap"
                             style="background-image:url(img/9-01.png) ;background-repeat: no-repeat;background-size: cover;">
                             <!-- <div class="overlay2"></div> -->
@@ -714,18 +714,18 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
                                                     data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                                     style="padding-bottom: 30px;">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image"
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image mrg5"
                                                         style="margin-bottom: 35px;"><img src="img/icon 7-07.png" alt=""
                                                             width="41" height="41" title="col-icon-1" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title h3mob"
                                                                 style="font-size: 22px ;font-weight: 600 ;text-transform: none ;">
                                                                 A Vibrant Campus</h3>
                                                         </div>
                                                         <div class="gdlr-core-column-service-content"
                                                             style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width">The campus of the Raffles Institute
+                                                            <p class="p-width txtmob1">The campus of the Raffles Institute
                                                                 islocated on Al-Orouba Street on
                                                                 the corner ofAl-Amir Turki Bin
                                                                 Abdulaziz Al Awal Road.</p> <a
@@ -747,18 +747,18 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
                                                     data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                                     style="padding-bottom: 30px;">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 31px;"><img src="img/icon 8-08.png" alt=""
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image mrg5"
+                                                        style="margin-bottom: 31px;"><img src="img/icon 8-08.png" alt="" 
                                                             width="43" height="45" title="col-icon-2" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title h3mob"
                                                                 style="font-size: 22px ;font-weight: 600 ;text-transform: none ;">
                                                                 Life in Riyadh</h3>
                                                         </div>
                                                         <div class="gdlr-core-column-service-content"
                                                             style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width">Riyadh is the largest city of Saudi
+                                                            <p class="p-width txtmob1">Riyadh is the largest city of Saudi
                                                                 Arabia
                                                                 and its capital, where the magic of the
                                                                 woldworld meets the vision of the 21st
@@ -781,18 +781,18 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
                                                     data-aos="fade-right" data-aos-duration="500"
                                                     style="padding-bottom: 30px;">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image"
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image mrg5"
                                                         style="margin-bottom: 33px;"><img src="img/icon 9-09.png" alt=""
                                                             width="40" height="43" title="col-icon-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title h3mob"
                                                                 style="font-size: 22px ;font-weight: 600 ;text-transform: none ;">
                                                                 Scholarships</h3>
                                                         </div>
                                                         <div class="gdlr-core-column-service-content"
                                                             style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width">The Raffles Institute is proud to offer
+                                                            <p class="p-width txtmob1">The Raffles Institute is proud to offer
                                                                 scholarships to international & domestic
                                                                 students, rewarding interested, qualified
                                                                 and talented applicants on merit.</p> <a
@@ -862,10 +862,10 @@
                                     <div class="vl">
                                     </div>
                                     <div class="position">
-                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob insta-text1"
                                             style="font-size: 40px;font-weight: 300;letter-spacing: 3px;text-transform: none;color: #EB8223;margin-bottom: 0px;margin-left: 37%;">
                                             Explore our Activities</h3>
-                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob insta-text1"
                                             style="font-size: 40px;font-weight: 600;letter-spacing: 1.5px;text-transform: none;color: #EB8223;margin-left: 37%;">
                                             THROUGH INSTAGRAM</h3>
                                     </div>
@@ -907,7 +907,7 @@
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2>GET IN TOUCH WITH US NOW<br>
+                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
