--- a/about-us.html
+++ b/about-us.html
@@ -580,7 +580,7 @@
                                                     style="position: absolute; top: 0px; left: 0px; z-index: 0; width: 100%; height: 100%; visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
                                                     <!--Runtime Modification - Img tag is Still Available for SEO Goals in Source - <img src="upload/slider-hp2-2.jpg" alt="" title="slider-hp2-2" width="1800" height="958" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg defaultimg" data-no-retina="">-->
                                                     <div class="" data-bgcolor="undefined"
-                                                        style="background-repeat: no-repeat; background-image: url(img/about/About\ us\ 1-01.png); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit; z-index: 20;"
+                                                        style="background-repeat: no-repeat; background-image: url(img/about/Aboutus1-01.webp); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit; z-index: 20;"
                                                         src="img/about/Aboutus1-01.webp"></div>
                                                 </div>
                                                 <!-- <div class="tp-caption   tp-resizeme" id="slide-6-layer-1"
