--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                 </a>
             </div>
 
-            <section class="subscription-block" style="margin-top: -205px;">
+            <section class="subscription-block subscription-block-home" style="margin-top: -205px;">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
@@ -922,18 +922,18 @@
 
             <footer>
                 <div class="kingster-footer-wrapper ">
-                    <div class="kingster-footer-container kingster-container clearfix">
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                    <div class="kingster-footer-container kingster-container clearfix mrg6" >
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 photo-footer">
                             <div id="text-2" class="widget widget_text kingster-widget">
                                 <div class="textwidget">
                                     <p><img src="img/raffles-logo3-01.png" alt=""></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-2"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Email</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob">Email</h3><span class="clear"></span>
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
@@ -943,10 +943,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-3"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Our Numbers</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob">Our Numbers</h3><span class="clear"></span>
                                 <div class="menu-campus-life-container">
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
@@ -957,10 +957,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-4"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Find Us At</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob">Find Us At</h3><span class="clear"></span>
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
