--- a/foundation-studies.html
+++ b/foundation-studies.html
@@ -278,7 +278,7 @@
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                                       <a href="tel:+966552995509">+966 55 299 5509</a>
                                 </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
@@ -740,7 +740,7 @@
 
 
             <div>
-                <a href="https://wa.me/0552995509/" class="float" target="_blank">
+                <a href="https://wa.me/+966552995509/" class="float" target="_blank">
                     <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
                 </a>
             </div>
