--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
                                 href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                            <a href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
@@ -583,7 +583,7 @@
                                         style="padding-bottom: 40px ;">
                                         <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align" id="div_1dd7_75">
                                             <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle" id="div_1dd7_76">
-                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="http://127.0.0.1:5500/img/videos/raffles3b.mp4"><img src="img/icon-play.png" alt="" width="82" height="82" title="icon-play" /></a>
+                                                <a class=" gdlr-core-js " href="img/videos/raffles3b.mp4"><img src="img/icon-play.png" alt="" width="82" height="82" title="icon-play" /></a>
                                             </div>
                                         </div>
                                     </div>
@@ -898,7 +898,7 @@
 
             <!-- whatsapp icon -->
             <div>
-                <a href="https://wa.me/0552995509/" class="float" target="_blank">
+                <a href="https://wa.me/+966552995509/" class="float" target="_blank">
                     <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
                 </a>
             </div>
