--- a/index-ar.html
+++ b/index-ar.html
@@ -922,7 +922,7 @@
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input type="email" name="email" id="email" required=""
-                                    placeholder="Type your e-mail address">
+                                    placeholder="Type your phone number">
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
@@ -988,7 +988,7 @@
 
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
-                        <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue. All
+                        <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue. All
                             Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
