--- a/interior-design.html
+++ b/interior-design.html
@@ -794,7 +794,7 @@
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input type="email" name="email" id="email" required
-                                    placeholder="Type your e-mail address">
+                                    placeholder="Type your phone number">
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
@@ -813,49 +813,49 @@
 
             <footer>
                 <div class="kingster-footer-wrapper ">
-                    <div class="kingster-footer-container kingster-container clearfix">
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                    <div class="kingster-footer-container kingster-container clearfix mrg6">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 photo-footer">
                             <div id="text-2" class="widget widget_text kingster-widget">
                                 <div class="textwidget">
-                                    <p><img src="img/raffles-logo3-01.png" alt="" /></p>
+                                    <p><img src="img/raffles-logo3-01.png" alt=""></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-2"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Email</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob">Email</h3><span class="clear"></span>
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="#">Info@raffles-me.com</a></li>
-                                        <li class="menu-item"><a href="#">Career@raffles-me.com</a></li>
+                                        <li class="menu-item"><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-3"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Our Numbers</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob">Contact Us</h3><span class="clear"></span>
                                 <div class="menu-campus-life-container">
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="#">+966 55 011 1719</a></li>
-                                        <li class="menu-item"><a href="#">+966 55 299 5509</a></li>
+                                        <li class="menu-item"><a href="tel:+966550111719">+966 55 011 1719</a></li>
+                                        <li class="menu-item"><a href="tel:+966552995509">+966 55 299 5509</a></li>
 
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-4"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Find Us At</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob">Location</h3><span class="clear"></span>
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="#">Office No.25, Home Offices,
+                                        <li class="menu-item"><a href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
                                     </ul>
@@ -867,7 +867,7 @@
 
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
-                        <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue. All
+                        <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue. All
                             Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
