--- a/visual-communication.html
+++ b/visual-communication.html
@@ -700,7 +700,7 @@
                                                                             <div
                                                                                 class="gdlr-core-title-item-title-wrap clearfix">
                                                                                 <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                                                    id="h3_983a_4">Theory</h3>
+                                                                                    id="h3_983a_4">Theoretical</h3>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -740,7 +740,7 @@
                                                             <h3
                                                                 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
                                                                 Career opportunities available after completing<br>
-                                                                the Visual Communication Advanced Diploma
+                                                                the Visual Communication Advanced Diploma and Bachelors
                                                             </h3>
                                                         </div>
                                                     </div>
@@ -789,7 +789,7 @@
                                     </h2>
                                     <form id="contact" name="contact" action="" method="post">
                                         <input type="email" name="email" id="email" required
-                                            placeholder="Type your e-mail address">
+                                            placeholder="Type your phone number">
                                         <input type="submit" id="submit" name="submit" value="SUBMIT">
                                     </form>
                                 </div>
@@ -807,18 +807,18 @@
 
                     <footer>
                         <div class="kingster-footer-wrapper ">
-                            <div class="kingster-footer-container kingster-container clearfix">
-                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                            <div class="kingster-footer-container kingster-container clearfix mrg6" >
+                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 photo-footer">
                                     <div id="text-2" class="widget widget_text kingster-widget">
                                         <div class="textwidget">
-                                            <p><img src="img/raffles-logo3-01.png" alt="" /></p>
+                                            <p><img src="img/raffles-logo3-01.png" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                                     <div id="gdlr-core-custom-menu-widget-2"
                                         class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                        <h3 class="kingster-widget-title">Email</h3><span class="clear"></span>
+                                        <h3 class="kingster-widget-title h3mob">Email</h3><span class="clear"></span>
                                         <div class="menu-our-campus-container">
                                             <ul id="menu-our-campus"
                                                 class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
@@ -828,24 +828,24 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                                     <div id="gdlr-core-custom-menu-widget-3"
                                         class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                        <h3 class="kingster-widget-title">Our Numbers</h3><span class="clear"></span>
+                                        <h3 class="kingster-widget-title h3mob">Contact Us</h3><span class="clear"></span>
                                         <div class="menu-campus-life-container">
                                             <ul id="menu-campus-life"
                                                 class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                                 <li class="menu-item"><a href="#">+966 55 011 1719</a></li>
                                                 <li class="menu-item"><a href="#">+966 55 299 5509</a></li>
-
+        
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                                <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                                     <div id="gdlr-core-custom-menu-widget-4"
                                         class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                        <h3 class="kingster-widget-title">Find Us At</h3><span class="clear"></span>
+                                        <h3 class="kingster-widget-title h3mob">Location</h3><span class="clear"></span>
                                         <div class="menu-academics-container">
                                             <ul id="menu-academics"
                                                 class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
@@ -858,36 +858,30 @@
                                 </div>
                             </div>
                         </div>
-
+        
                         <div class="kingster-copyright-wrapper">
                             <div class="kingster-copyright-container kingster-container clearfix">
-                                <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue.
-                                    All
+                                <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue. All
                                     Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
                                 <div class="kingster-copyright-right kingster-item-pdlr">
                                     <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                         style="padding-bottom: 0px ;">
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="facebook">
+                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook">
                                             <i class="fa fa-facebook"></i>
                                         </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="google-plus">
+                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="google-plus">
                                             <i class="fa fa-google-plus"></i>
                                         </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="linkedin">
+                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin">
                                             <i class="fa fa-linkedin"></i>
                                         </a>
                                         <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="skype">
                                             <i class="fa fa-skype"></i>
                                         </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="twitter">
+                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter">
                                             <i class="fa fa-twitter"></i>
                                         </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="instagram">
+                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="instagram">
                                             <i class="fa fa-instagram"></i>
                                         </a>
                                     </div>
